--- a/resources/scss/web.scss
+++ b/resources/scss/web.scss
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap");
-
 body {
     font-family: Ubuntu, sans-serif;
 }
@@ -7,13 +6,14 @@ body {
 .topnav {
     background-color: #f2f2f2;
 }
+
 #top-header-main {
     background-color: #5274d9;
 }
+
 #home-search-big {
     background-color: #5274d9;
     color: white;
-
     #home-search-form {
         width: 1000px;
         margin: 0px auto;
@@ -22,19 +22,16 @@ body {
         font-size: 1.5rem;
         background-color: #ffffff;
         padding-left: 20px;
-
         #home-search-anything {
             display: inline-block;
             width: 910px;
             border: none;
             outline: none;
             padding: 15px 20px;
-
-            :focus {
+             :focus {
                 box-shadow: inset 0px 0px 10px 5px;
             }
         }
-
         #search-button {
             display: inline-block;
             width: 40px;
@@ -44,12 +41,24 @@ body {
         }
     }
 }
+
 #footer-wrapper {
     background-color: #5274d9;
     color: #ffffff;
-
     a {
         color: #f2f2f2;
         text-decoration: none;
+    }
+}
+
+#site-feature-list-login {
+    padding-left: 0px;
+    margin-top: 30px;
+    li.feature-item {
+        list-style-type: none;
+        margin-bottom: 30px;
+        img {
+            margin-right: 30px;
+        }
     }
 }
