--- a/resources/scss/web.scss
+++ b/resources/scss/web.scss
@@ -62,3 +62,11 @@ body {
         }
     }
 }
+
+.alert {
+    border-radius: 0px;
+    text-align: center;
+    margin: 0px;
+    position: fixed;
+    width: 100%;
+}
