--- a/resources/scss/web.scss
+++ b/resources/scss/web.scss
@@ -151,3 +151,9 @@ body {
 .promoted-ad-block {
     background-color: #fcfbf3;
 }
+
+#single_ad_price {
+    font-weight: bold;
+    font-size: 1.5em;
+    color: #5274d9;
+}
